--- a/.github/workflows/count-lines.yml
+++ b/.github/workflows/count-lines.yml
@@ -46,10 +46,13 @@ jobs:
         # Replace the placeholder in README.md
         sed -i "/<!-- lines-of-code -->/c\Total Lines of Code: $TOTAL_LINES <!-- lines-of-code -->" README.md
 
-    - name: Commit Changes
+    - name: Stage All Changes
+      run: |
+        git add -A # Stages all changes, including untracked files
+
+    - name: Commit and Push Changes
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add README.md
-        git commit -m "Update total lines of code"
+        git commit -m "Update total lines of code" || echo "No changes to commit"
         git push
