--- a/.github/workflows/count-lines.yml
+++ b/.github/workflows/count-lines.yml
@@ -28,30 +28,47 @@ jobs:
 
         mkdir -p public-repos
         cd public-repos
-        
+
+        TOTAL_LINES=0
+
         for REPO in $REPOS; do
           # Replace the URL to include the token for authentication
           AUTHENTICATED_REPO=$(echo "$REPO" | sed "s/https:\/\//https:\/\/$GH_PAT@/g")
-  
-          # Quietly clone repositories
-          git clone "$AUTHENTICATED_REPO" > /dev/null 2>&1
+          REPO_NAME=$(basename "$REPO" .git)
+
+          echo "Cloning $REPO_NAME..."
+          git clone --mirror "$AUTHENTICATED_REPO" "$REPO_NAME.git" > /dev/null 2>&1
+
+          # Navigate into the repository and fetch all branches
+          cd "$REPO_NAME.git" || exit
+          git remote update > /dev/null 2>&1
+
+          # Process each branch and calculate lines of code
+          for BRANCH in $(git branch -r | grep -v '\->' | sed 's/origin\///'); do
+            echo "Processing branch: $BRANCH"
+            git checkout "$BRANCH" > /dev/null 2>&1
+            BRANCH_LINES=$(cloc . --json | jq '.SUM.code // 0')
+            TOTAL_LINES=$((TOTAL_LINES + BRANCH_LINES))
+          done
+          cd ..
+          rm -rf "$REPO_NAME.git" # Clean up the repository
         done
 
-        echo "Calculating total lines of code..."
+        # Store the total lines of code in a file
         mkdir -p ../output
-        cloc . --json > ../output/cloc-output.json
+        echo $TOTAL_LINES > ../output/total-lines.txt
 
     - name: Update README.md
       run: |
-        # Extract the total lines of code from cloc-output.json
-        TOTAL_LINES=$(jq '.SUM.code' output/cloc-output.json)
-        
+        # Read the total lines of code
+        TOTAL_LINES=$(cat output/total-lines.txt)
+
         # Replace the placeholder in README.md
         sed -i "/<!-- lines-of-code -->/c\Total Lines of Code: $TOTAL_LINES <!-- lines-of-code -->" README.md
 
     - name: Stage All Changes
       run: |
-        git add README.md output/cloc-output.json # Stages updated files
+        git add README.md # Stage the updated README.md
 
     - name: Commit and Push Changes
       run: |
